2000-12-30  Michael Livshin  <mlivshin@bigfoot.com>

	* guardians.c (guardian_print): for sharing guardians, print that
	they are sharing.
	(scm_guard, scm_get_one_zombie): place the critical section
	barriers more correctly.

	* weaks.c (scm_scan_weak_vectors): move the calculation of the
	`weak_keys' and `weak_values' flags out of the inner loop.

2000-12-29  Michael Livshin  <mlivshin@bigfoot.com>

	* guardians.c: (greedily_guarded_prop): deleted.
	(greedily_guarded_whash): new variable.  a doubly-weak hash table
	used to keep the "greedily hashed" object property.  the previous
	implementation (via primitive object properties) was incorrect due
	to its only-the-key-is-weak semantics.
	(scm_guard, get_one_zombie, scm_init_guardians): use/init
	`greedily_guarded_whash'.

2000-12-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (check_map_args), gh_data.c (gh_set_substr,
	gh_scm2newstr, gh_get_substr, gh_symbol2newstr), print.c
	(scm_iprin1):  Use scm_remember_upto_here_1 instead of
	scm_remember.

	* gc.[ch] (scm_remember_upto_here_1, scm_remember_upto_here_2,
	scm_remember_upto_here):  New functions.

	(scm_remember):  Deprecated.

2000-12-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* continuations.c (scm_make_continuation):  Make variable cont
	volatile to let the compiler know that it won't be clobbered by
	longjmp.  (It wouldn't be anyway, but for some reason the compiler
	is not able to see that.)

2000-12-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	This patch re-introduces the unused member "properties" of
	struct scm_subr_entry as requested by Mikael Djurfeldt.

	* procs.h (scm_subr_entry):  Re-introduced member "properties".

	(SCM_SUBR_PROPS):  Un-deprecated.

	* procs.c (scm_make_subr_opt, scm_mark_subr_table):  Struct
	scm_subr_entry has a member "properties" again.

2000-12-28  Michael Livshin  <mlivshin@bigfoot.com>

	* guardians.c (mark_dependencies_in_tconc): new function.
	(mark_dependencies): bug fix.  mark the dependencies of the known